# weather_app

./: .gitignore  LICENSE  README.md  pyproject.toml  test_weather_api.py  weather_api.ipynb  weather_api.py  wx_config.py  wx_utils.py
